This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: mmap can crash with write_byte
Type: crash Stage:
Components: Extension Modules Versions: Python 3.0, Python 3.1, Python 2.7, Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ocean-city
Priority: normal Keywords:

Created on 2009-02-27 17:40 by ocean-city, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (2)
msg82853 - (view) Author: Hirokazu Yamamoto (ocean-city) * (Python committer) Date: 2009-02-27 17:40
mmap.write_byte doesn't check buffer size, so it can cause crash like
bellow.

import mmap
m = mmap.mmap(-1, 1)
for i in xrange(10000): # enough?
    print i
    m.write_byte('1') # crash

The patch is in r69945.
msg82902 - (view) Author: Hirokazu Yamamoto (ocean-city) * (Python committer) Date: 2009-02-28 10:57
Fixed in r70052(trunk), r70053(py3k).
History
Date User Action Args
2022-04-11 14:56:46adminsetgithub: 49636
2009-02-28 10:57:46ocean-citysetstatus: open -> closed
resolution: fixed
messages: + msg82902
2009-02-27 17:40:12ocean-citycreate