Issue #5386: mmap.write_byte didn't check map size, so it could cause buffer overrun.